<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/gray2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageView
            android:id="@+id/imgDelta"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:src="@drawable/ip_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            />
        <TextView
            android:id="@+id/txtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/textHead"
            android:layout_marginStart="35dp"
            android:textColor="@color/black"
            android:text="@string/passenger"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kathleen_huang"
            app:layout_constraintStart_toEndOf="@id/txtPass"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/textHead"
            android:layout_marginStart="10dp"
            android:textColor="@color/grey1"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const2"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/const1"
        tools:layout_editor_absoluteX="131dp">

        <ImageView
            android:id="@+id/plan"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_plane"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jfo"
            style="@style/textBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/jfc"
            app:layout_constraintEnd_toStartOf="@id/plan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/textBlue.01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/new_york_city"
            app:layout_constraintEnd_toStartOf="@id/plan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jfo" />

        <TextView
            android:id="@+id/sea"
            style="@style/textBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/plan"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/textBlue.01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seattle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/plan"
            app:layout_constraintTop_toBottomOf="@id/sea"
            android:layout_marginEnd="32dp"
            />
        <TextView
            android:id="@+id/time"
            style="@style/textBlue.02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8_00am"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="45dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depart"
            app:layout_constraintBottom_toTopOf="@id/time"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="45dp"
            style="@style/textBlue.03"
            />
        <TextView
            android:id="@+id/time1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_11_17am"
            style="@style/textBlue.02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="28dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrive"
            style="@style/textBlue.03"
            app:layout_constraintBottom_toTopOf="@id/time1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="82dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/const2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/gray2"
        >
        <TextView
            android:id="@+id/endRoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boarding_begins"
            style="@style/textEnd3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/andTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_30am"
            style="@style/textEnd2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/endRoad"/>
        <TextView
            android:id="@+id/endGate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gate"
            style="@style/textEnd3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/andTime"
            />
        <TextView
            android:id="@+id/D4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d4"
            style="@style/textEnd2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/endGate"/>
        <TextView
            android:id="@+id/endSeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seat"
            style="@style/textEnd3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/D4"
            />
        <TextView
            android:id="@+id/c3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3c"
            style="@style/textEnd2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/endSeat"/>
        <TextView
            android:id="@+id/endFlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight"
            style="@style/textEnd3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingEnd="160dp"

            />
        <TextView
            android:id="@+id/D2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d2218"
            style="@style/textEnd2"
            android:paddingEnd="130dp"
            app:layout_constraintTop_toBottomOf="@id/endFlight"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_qr"
           android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@id/D2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>